Add release process
Fix javadoc Configuration.java

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,23 @@
 	<packaging>jar</packaging>
 
 	<name>mongo-spring-search</name>
-	<url>https://github.com/ajclopez</url>
+	<url>https://github.com/ajclopez/mongo-spring-search</url>
 	<description>API for generating database queries using Spring MongoDB.</description>
+
+	<licenses>
+    	<license>
+      		<name>MIT License</name>
+      		<url>https://opensource.org/licenses/mit-license.php</url>
+      		<distribution>repo</distribution>
+   		</license>
+  	</licenses>
+
+	<developers>
+		<developer>
+			<name>Antonio López</name>
+			<organizationUrl>https://github.com/ajclopez</organizationUrl>
+		</developer>
+	</developers>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -90,7 +105,75 @@
                     </execution>
                 </executions>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.8</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.2.0</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>            
 		</plugins>
 	</build>
+
+	<scm>
+		<connection>scm:git:git://github.com/ajclopez/mongo-spring-search.git</connection>
+		<developerConnection>scm:git:ssh://github.com:ajclopez/mongo-spring-search.git</developerConnection>
+		<url>https://github.com/ajclopez/mongo-spring-search/tree/master</url>
+	</scm>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>	
 
 </project>
