--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,67 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>            
+			</plugin>
+			<plugin>
+            	<groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.6</version>
+                <configuration>
+					<excludes>
+						<exclude>io/github/ajclopez/mss/Query*</exclude>
+					</excludes>
+				</configuration>
+            	<executions>
+                	<execution>
+                		<id>pre-unit-tests</id>
+                    	<goals>
+                        	<goal>prepare-agent</goal>
+                    	</goals>
+                    	<configuration>
+							<!-- Sets the path to the file which contains the execution data. -->
+							<destFile>${project.build.directory}/coverage-reports/jacoco/jacoco.exec</destFile>
+						</configuration>
+                   	</execution>
+                    <execution>
+                        <id>post-unit-test</id>
+                        <phase>test</phase>
+                    	<goals>
+                            <goal>report</goal>
+                        </goals>
+                       	<configuration>
+	                       	<!-- Sets the path to the file which contains the execution data. -->
+							<dataFile>${project.build.directory}/coverage-reports/jacoco/jacoco.exec</dataFile>
+							<!-- Sets the output directory for the code coverage report. -->
+							<outputDirectory>${project.build.directory}/coverage-reports/jacoco</outputDirectory>
+						</configuration>
+                    </execution>
+                    <execution>
+    					<id>jacoco-check</id>
+    					<goals>
+        					<goal>check</goal>
+    					</goals>
+    					<configuration>
+        					<rules>
+            					<rule>
+                					<element>BUNDLE</element>
+                					<limits>
+                    					<limit>
+                        					<counter>INSTRUCTION</counter>
+                        					<value>COVEREDRATIO</value>
+                        					<minimum>0.80</minimum>
+                    					</limit>
+                    					<limit>
+                        					<counter>BRANCH</counter>
+                        					<value>COVEREDRATIO</value>
+                        					<minimum>0.75</minimum>
+                    					</limit>
+                					</limits>
+            					</rule>
+        					</rules>
+    					</configuration>
+					</execution>
+            	</executions>
+        	</plugin>   
 		</plugins>
 	</build>
 
