--- a/pom.xml
+++ b/pom.xml
@@ -30,26 +30,29 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>14</java.version>
+		<junit.version>4.13.1</junit.version>
+		<spring.data.mongodb.version>3.4.5</spring.data.mongodb.version>
+		<antlr.version>4.9</antlr.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-mongodb</artifactId>
-			<version>3.1.2</version>
+			<version>${spring.data.mongodb.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4-runtime</artifactId>
-			<version>4.9</version>
+			<version>${antlr.version}</version>
 		</dependency>
 		
 	</dependencies>
